<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ededed"
    tools:context=".Login" >
    
    <RelativeLayout
        android:id="@+id/loginForm"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
	    android:background="@drawable/drop_shadow"
		android:layout_centerInParent="true"
		android:paddingBottom="10dp">

	    <TextView
	        android:id="@+id/loginTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:textSize="20sp"
        	android:textColor="#34b4e3"
	        android:text="@string/please_login" />
	    
	    <View
	        android:id="@+id/divider"
	        android:layout_width="fill_parent"
	        android:layout_height="2dp"
	        android:layout_below="@id/loginTitle"
	        android:background="#34b4e3" />

	    <EditText
	        android:id="@+id/email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:layout_below="@+id/divider"
	        android:hint="@string/email"
	        android:layout_centerHorizontal="true"
	        android:ems="10"
	        android:inputType="textEmailAddress" >
	
	        <requestFocus />

	    </EditText>
	
	    <EditText
	        android:id="@+id/pass"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/email"
	        android:hint="@string/password"
	        android:layout_margin="10dp"
	        android:layout_centerHorizontal="true"
	        android:ems="10"
	        android:inputType="textPassword" />
	    
	    <LinearLayout
	        android:id="@+id/options"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_below="@id/pass"
	        android:orientation="vertical" >

	        <CheckBox
	            android:id="@+id/passwordVisibility"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="Show password" />

	        <CheckBox
	            android:id="@+id/cbRememberState"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="Remember me" />
	        
	    </LinearLayout>
        
	    <LinearLayout
	        android:id="@+id/buttons"
        	android:layout_width="220dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/options"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_centerHorizontal="true">

		    <Button
		        android:id="@+id/submit"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/login" />"

		    <Button
		        android:id="@+id/clear"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/clear" />
	        
	    </LinearLayout>
        
    </RelativeLayout>

</RelativeLayout>